refactor: normalize Java formatting and imports