@@ -1,24 +1,27 @@
 package com.shiyu.ai.model.implementation.infrastructure.gateway;
 
+import static org.junit.jupiter.api.Assertions.*;
+
 import com.shiyu.ai.kernel.context.TenantId;
+
 import org.junit.jupiter.api.Test;
 
-import java.util.Set;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.Set;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 
-import static org.junit.jupiter.api.Assertions.*;
-
 class ModelRouterTest {
     @Test
     void acceptsDefaultModelAliasAndMatchesCapabilities() {
         ModelRouter router = new ModelRouter();
-        ModelRoutePolicy policy = new ModelRoutePolicy("p1", 1, "default", java.util.List.of("configured"), 1000, true, 1000);
+        ModelRoutePolicy policy =
+                new ModelRoutePolicy(
+                        "p1", 1, "default", java.util.List.of("configured"), 1000, true, 1000);
         router.savePolicy(policy);
         assertEquals("configured", router.choose("p1", tenant(1), Set.of("structured")).model());
     }
@@ -26,15 +29,38 @@ class ModelRouterTest {
     @Test
     void rejectsUnknownModelAndEmptyRoute() {
         ModelRouter router = new ModelRouter();
-        assertThrows(IllegalArgumentException.class, () -> router.savePolicy(new ModelRoutePolicy("p1", 1, "bad", java.util.List.of("missing"), 1000, true, 1000)));
-        assertThrows(IllegalArgumentException.class, () -> new ModelRoutePolicy("p2", 1, "empty", java.util.List.of(), 1000, true, 1000));
+        assertThrows(
+                IllegalArgumentException.class,
+                () ->
+                        router.savePolicy(
+                                new ModelRoutePolicy(
+                                        "p1",
+                                        1,
+                                        "bad",
+                                        java.util.List.of("missing"),
+                                        1000,
+                                        true,
+                                        1000)));
+        assertThrows(
+                IllegalArgumentException.class,
+                () ->
+                        new ModelRoutePolicy(
+                                "p2", 1, "empty", java.util.List.of(), 1000, true, 1000));
     }
 
     @Test
     void unhealthyPreferredModelFallsBackToNext() {
         ModelRouter router = new ModelRouter();
         router.register(new ModelProviderCapabilities("p", "fast", Set.of("chat"), 100));
-        router.savePolicy(new ModelRoutePolicy("p1", 1, "fallback", java.util.List.of("p:fast", "configured"), 1000, true, 1000));
+        router.savePolicy(
+                new ModelRoutePolicy(
+                        "p1",
+                        1,
+                        "fallback",
+                        java.util.List.of("p:fast", "configured"),
+                        1000,
+                        true,
+                        1000));
         router.markFailure("p", "fast", "timeout");
         router.markFailure("p", "fast", "timeout");
         router.markFailure("p", "fast", "timeout");
@@ -51,12 +77,14 @@ class ModelRouterTest {
         List<Future<?>> futures = new ArrayList<>(attempts);
         try {
             for (int index = 0; index < attempts; index++) {
-                futures.add(executor.submit(() -> {
-                    ready.countDown();
-                    start.await();
-                    router.markFailure("default", "configured", "timeout");
-                    return null;
-                }));
+                futures.add(
+                        executor.submit(
+                                () -> {
+                                    ready.countDown();
+                                    start.await();
+                                    router.markFailure("default", "configured", "timeout");
+                                    return null;
+                                }));
             }
             assertTrue(ready.await(5, TimeUnit.SECONDS));
             start.countDown();
@@ -71,29 +99,62 @@ class ModelRouterTest {
     @Test
     void executesFallbackAfterProviderFailureAndRespectsNoFallbackPolicy() {
         ModelRouter router = new ModelRouter();
-        router.savePolicy(new ModelRoutePolicy("fallback", 1, "fallback",
-                java.util.List.of("configured", "OPENAI:gpt-4o"), 1000, true, 1000));
-        java.util.concurrent.atomic.AtomicInteger calls = new java.util.concurrent.atomic.AtomicInteger();
-        String value = router.executeWithFallback("fallback", tenant(1), Set.of("chat"), candidate -> {
-            if (calls.getAndIncrement() == 0) throw new IllegalStateException("first down");
-            return candidate.model();
-        });
+        router.savePolicy(
+                new ModelRoutePolicy(
+                        "fallback",
+                        1,
+                        "fallback",
+                        java.util.List.of("configured", "OPENAI:gpt-4o"),
+                        1000,
+                        true,
+                        1000));
+        java.util.concurrent.atomic.AtomicInteger calls =
+                new java.util.concurrent.atomic.AtomicInteger();
+        String value =
+                router.executeWithFallback(
+                        "fallback",
+                        tenant(1),
+                        Set.of("chat"),
+                        candidate -> {
+                            if (calls.getAndIncrement() == 0)
+                                throw new IllegalStateException("first down");
+                            return candidate.model();
+                        });
         assertEquals("gpt-4o", value);
 
-        router.savePolicy(new ModelRoutePolicy("strict", 1, "strict",
-                java.util.List.of("configured"), 1000, false, 1000));
-        assertThrows(IllegalStateException.class, () -> router.executeWithFallback("strict", tenant(1),
-                Set.of("not-supported"), ignored -> "never"));
-        assertThrows(IllegalStateException.class, () -> router.executeWithFallback("strict", tenant(1),
-                Set.of("chat"), ignored -> { throw new IllegalStateException("down"); }));
+        router.savePolicy(
+                new ModelRoutePolicy(
+                        "strict", 1, "strict", java.util.List.of("configured"), 1000, false, 1000));
+        assertThrows(
+                IllegalStateException.class,
+                () ->
+                        router.executeWithFallback(
+                                "strict", tenant(1), Set.of("not-supported"), ignored -> "never"));
+        assertThrows(
+                IllegalStateException.class,
+                () ->
+                        router.executeWithFallback(
+                                "strict",
+                                tenant(1),
+                                Set.of("chat"),
+                                ignored -> {
+                                    throw new IllegalStateException("down");
+                                }));
     }
 
     @Test
     void validatesPolicyScopeAndNormalizesLimits() {
         ModelRouter router = new ModelRouter();
         assertThrows(IllegalArgumentException.class, () -> router.savePolicy(null));
-        ModelRoutePolicy policy = new ModelRoutePolicy("p2", 2, "limits",
-                java.util.Arrays.asList(null, " configured ", ""), -1, true, 999999);
+        ModelRoutePolicy policy =
+                new ModelRoutePolicy(
+                        "p2",
+                        2,
+                        "limits",
+                        java.util.Arrays.asList(null, " configured ", ""),
+                        -1,
+                        true,
+                        999999);
         assertEquals(java.util.List.of("configured"), policy.orderedModels());
         assertEquals(30_000, policy.timeoutMs());
         assertEquals(128_000, policy.maxTokens());
@@ -107,26 +168,43 @@ class ModelRouterTest {
 
     @Test
     void rejectsInvalidRouteIdentityAndNormalizesBlankEntries() {
-        assertThrows(IllegalArgumentException.class,
-                () -> new ModelRoutePolicy(null, 1, "route", java.util.List.of("model"), 1, true, 1));
-        assertThrows(IllegalArgumentException.class,
-                () -> new ModelRoutePolicy(" ", 1, "route", java.util.List.of("model"), 1, true, 1));
-        assertThrows(IllegalArgumentException.class,
-                () -> new ModelRoutePolicy("id", 0, "route", java.util.List.of("model"), 1, true, 1));
-        assertThrows(IllegalArgumentException.class,
+        assertThrows(
+                IllegalArgumentException.class,
+                () ->
+                        new ModelRoutePolicy(
+                                null, 1, "route", java.util.List.of("model"), 1, true, 1));
+        assertThrows(
+                IllegalArgumentException.class,
+                () ->
+                        new ModelRoutePolicy(
+                                " ", 1, "route", java.util.List.of("model"), 1, true, 1));
+        assertThrows(
+                IllegalArgumentException.class,
+                () ->
+                        new ModelRoutePolicy(
+                                "id", 0, "route", java.util.List.of("model"), 1, true, 1));
+        assertThrows(
+                IllegalArgumentException.class,
                 () -> new ModelRoutePolicy("id", 1, null, java.util.List.of("model"), 1, true, 1));
-        assertThrows(IllegalArgumentException.class,
+        assertThrows(
+                IllegalArgumentException.class,
                 () -> new ModelRoutePolicy("id", 1, " ", java.util.List.of("model"), 1, true, 1));
-        assertThrows(IllegalArgumentException.class,
+        assertThrows(
+                IllegalArgumentException.class,
                 () -> new ModelRoutePolicy("id", 1, "route", null, 1, true, 1));
-        assertThrows(IllegalArgumentException.class,
-                () -> new ModelRoutePolicy("id", 1, "route", java.util.Arrays.asList(null, " "), 1, true, 1));
-        ModelRoutePolicy defaults = new ModelRoutePolicy("id", 1, "route", java.util.List.of(" model "), 0, true, 0);
+        assertThrows(
+                IllegalArgumentException.class,
+                () ->
+                        new ModelRoutePolicy(
+                                "id", 1, "route", java.util.Arrays.asList(null, " "), 1, true, 1));
+        ModelRoutePolicy defaults =
+                new ModelRoutePolicy("id", 1, "route", java.util.List.of(" model "), 0, true, 0);
         assertEquals(java.util.List.of("model"), defaults.orderedModels());
         assertEquals(30_000, defaults.timeoutMs());
         assertEquals(16_000, defaults.maxTokens());
     }
 
-    private static TenantId tenant(long value) { return new TenantId(value); }
-
+    private static TenantId tenant(long value) {
+        return new TenantId(value);
+    }
 }
